<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="20dp">

    <EditText
        android:id="@+id/et_num1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/num1_hint"
        android:inputType="number"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/et_num2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/num2_hint"
        android:inputType="number"
        android:minHeight="48dp" />

    <CheckBox
        android:id="@+id/cb_suma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_text" />

    <CheckBox
        android:id="@+id/cb_resta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtract_text" />

    <CheckBox
        android:id="@+id/cb_multiplicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiply_text" />

    <CheckBox
        android:id="@+id/cb_division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divide_text" />

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate_button_text" />

    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:text="@string/result_hint"
        android:textStyle="bold" />

</LinearLayout>